--- a/hello.html
+++ b/hello.html
@@ -32,6 +32,7 @@
 
       crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="main.css">
+      <link rel="stylesheet" type="text/css" href="sub.css">
 
 
   </head>
